syntax = "proto3";
package  greet;
option go_package="greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}
message GreetRequest {
    Greeting greeting = 1;
}
message GreetResponse{
    string result = 1;   
}
message GreetManyRequest {
     Greeting greeting = 1;

}
message GreetManyResponse{
    string result = 1;
}
message LongGreetManyRequest {
    Greeting greeting = 1;
}
message LongGreetManyResponse {
    string result =1 ;
}
message GreeteveryoneRequest{
    Greeting greeting = 1;
}
message GreeteveryoneResponse {
    string result = 1;
}
message GreetWithDeadlineRequest {
    Greeting greeting = 1;
}

message GreatWithDeadlineResponse {
    string result = 1;
}

service GreetingService {
 // Uniary Api
 rpc Greet(GreetRequest) returns (GreetResponse) {};
 // Server Streaming Api
 rpc GreetMany(GreetManyRequest) returns ( stream GreetManyResponse) {};
 // Client Side Streaming
 rpc LongGreet(stream LongGreetManyRequest) returns( LongGreetManyResponse){};
 // Bi Di Streaming
 rpc GreetEveryone(stream GreeteveryoneRequest) returns (stream GreeteveryoneResponse){};
 // UnaryWithDeadline
 rpc GreetWithDeadline(GreetWithDeadlineRequest) returns (GreatWithDeadlineResponse){};
 
}